# driver-ga

./: CMakeLists.txt  CMakeLists.txt~  README.md
FSMDriver/: FSM.h  FSMDriver.cpp  FSMDriver.h  GADriver.cpp  GADriver.h  InsideTrack.cpp  InsideTrack.h  InsideTrack.h~  Knowledge.cpp  Knowledge.h  Log.h  OutOfTrack.cpp  OutOfTrack.h  Stuck.cpp  Stuck.h  TestTrack.cpp  TestTrack.h
FSMDriver5/: Curve.h~  FSM.h  FSMDriver5.cpp  FSMDriver5.h  Log.h  OutOfTrack.cpp  OutOfTrack.h  StraightLine.h~  Stuck.cpp  Stuck.h
FSMDriver_Genetic_Algorithm/: Chromosome.cpp  Chromosome.h  Chromosome.h~  DriverGeneticAlgorithm.cpp  DriverGeneticAlgorithm.h  DriverGeneticAlgorithm.h~  GADriver.cpp  Individual.cpp  Individual.h  Individual.h~  VEGA.cpp  VEGA.h
Genetic_Algorithm/: Chromosome.cpp  Chromosome.h  GaAdapter.cpp  GaAdapter.h  Individual.cpp  Individual.h
configs/: as.xml  cg1.xml  corkscrew.xml  cs.xml  dirt2.xml  dirt6.xml  ds.xml  et5.xml  etrack3.xml  forza.xml  mixed1.xml  mixed2.xml  spring.xml  wheel2.xml
src/: client.cpp
